--- a/estilo.css
+++ b/estilo.css
@@ -133,36 +133,54 @@ h1 {
     bottom: 0;
     margin: auto;
     z-index: 1;
-
 }
 
-.tarjetas {
+.tarjetas-grid {
     display: flex;
-    flex-direction: row;
     flex-wrap: wrap;
-    align-items: center;
+    grid-gap: 50px;
     justify-content: center;
-    margin: 0;
 }
 
 .tarjeta {
-    display: flex;
-    padding: 5px;
-    border-radius: 40px;
     width: 200px;
     height: 200px;
-    margin: 20px;
-    color: black;
-    font-family: 'fuenteContenido';
-    background-image: linear-gradient(45deg, #f6c203 0%, #eec58b 51%, #c18608 100%);
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    font-size: large;
+    perspective: 1000px;
 }
 
-.tarjetas .tarjeta {
+.tarjeta-inner {
+    position: relative;
+    width: 180px;
+    height: 180px;
+    box-shadow: 1px 1px 3px rgb(0, 0, 0), 4px 4px 10px rgb(0, 0, 0);
+    transition: all 550ms cubic-bezier(0.1, 0.22, 0.8, 1.13);
+    transform-style: preserve-3d;
     cursor: pointer;
+    backface-visibility: hidden;
+}
+
+.frente, .atras{
+    position: absolute;
+    width: inherit;
+    height: inherit;
+    font-family: 'fuenteContenido';
+    border-radius: 40px;
+    background-image: linear-gradient(45deg, #f6c203 0%, #eec58b 51%, #c18608 100%);
+    color: black;
+    padding: 5px;
+    font-size: 1.25rem;
+    text-align: center;
+    display: grid;
+    place-items: center;
+    backface-visibility: hidden;
+}
+
+.atras {
+    transform: rotateY(180deg);
+}
+
+.tarjeta:hover .tarjeta-inner {
+    transform: rotateY(-180deg);
 }
 
 .cajaBoton {
@@ -171,7 +189,6 @@ h1 {
 }
 
 .coleccion .boton {
-
     padding: 15px;
     width: 160px;
     margin: auto;
