--- a/estilo.css
+++ b/estilo.css
@@ -119,6 +119,10 @@ h1 {
     margin: auto;
 }
 
+.header {
+    margin: 15px 0;
+}
+
 .coleccion {
     width: 500px;
     flex-grow: 1;
@@ -146,35 +150,46 @@ h1 {
     width: 200px;
     height: 200px;
     perspective: 1000px;
+    justify-content: center;
 }
 
 .tarjeta-inner {
     position: relative;
-    width: 180px;
-    height: 180px;
-    box-shadow: 1px 1px 3px rgb(0, 0, 0), 4px 4px 10px rgb(0, 0, 0);
+    width: 200px;
+    height: 200px;
     transition: all 550ms cubic-bezier(0.1, 0.22, 0.8, 1.13);
     transform-style: preserve-3d;
-    cursor: pointer;
     backface-visibility: hidden;
 }
 
 .frente, .atras{
     position: absolute;
-    width: inherit;
-    height: inherit;
+    width: 100%;
+    height: 100%;
     font-family: 'fuenteContenido';
     border-radius: 40px;
     background-image: linear-gradient(45deg, #f6c203 0%, #eec58b 51%, #c18608 100%);
+    box-shadow: 1px 1px 3px rgb(0, 0, 0), 4px 4px 10px rgb(0, 0, 0);
     color: black;
-    padding: 5px;
     font-size: 1.25rem;
     text-align: center;
     display: grid;
     place-items: center;
     backface-visibility: hidden;
+    cursor: default;
 }
 
+.sobre{
+    cursor: pointer;
+}
+
+.vinculo{
+    color: azure;
+}
+
+#tarjeta4back{
+    font-size: 2em;
+}
 .atras {
     transform: rotateY(180deg);
 }
