--- a/estilo.css
+++ b/estilo.css
@@ -47,7 +47,8 @@ main {
 }
 
 h1 {
-    font-family: 'fuenteTitulo';
+    font-family: 'Style Script', cursive;
+    font-size: 3em;
 }
 
 .caja-input {
@@ -56,7 +57,7 @@ h1 {
     align-items: center;
     width: 300px;
     justify-content: center;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 .input {
@@ -120,9 +121,13 @@ h1 {
 }
 
 .header {
-    margin: 15px 0;
+    margin-top: 30px;
+    margin-bottom: 35px;
 }
 
+.titulo-2{
+    font-size: 2.5em;
+}
 .coleccion {
     width: 500px;
     flex-grow: 1;
@@ -166,7 +171,7 @@ h1 {
     position: absolute;
     width: 100%;
     height: 100%;
-    font-family: 'fuenteContenido';
+    font-family: 'Style Script', cursive;
     border-radius: 40px;
     background-image: linear-gradient(45deg, #f6c203 0%, #eec58b 51%, #c18608 100%);
     box-shadow: 1px 1px 3px rgb(0, 0, 0), 4px 4px 10px rgb(0, 0, 0);
